plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.12'
}

repositories {
    mavenCentral()
    maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
}

dependencies {
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'

    compile 'io.github.typhon0:AnimateFX:1.2.1'
}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

application {
    mainClassName = "ch.skyfy.tictactoe.TicTacToeLauncher"
}

javafx {
//    version = "14"
    sdk = "C:\\Javafx\\sdk\\javafx-sdk-16"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
}


task fatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': "ch.skyfy.tictactoe.TicTacToeLauncher"
    }
    archivesBaseName = "${rootProject.name}"
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

run {
    doFirst {
        jvmArgs += ['--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ch.skyfy.tictactoe',
                    '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ch.skyfy.tictactoe'
        ]
    }
}

compileJava {
    doFirst {
        options.compilerArgs += [
                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ch.skyfy.tictactoe',
                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ch.skyfy.tictactoe'
        ]
        options.encoding = "UTF-8"
    }
}

// ENABLE JAVA 14 PREVIEW (RECORD, PATTERN, ...)
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}